src/libmem/libmem.h


/* Primitive types */
typedef void     lm_void_t;

typedef enum {
	LM_FALSE = 0,
	LM_TRUE = 1
}  lm_bool_t;

typedef uint8_t   lm_byte_t;

typedef uintptr_t lm_address_t;

typedef size_t    lm_size_t;

typedef const lm_char_t *lm_string_t;

typedef const lm_byte_t *lm_bytearray_t;

typedef uint32_t lm_prot_t;


typedef struct {
	lm_pid_t  pid;
	lm_pid_t  ppid;
	lm_size_t bits;
	lm_time_t start_time; /* Process start timestamp, in milliseconds since last boot */
	lm_char_t path[LM_PATH_MAX];
	lm_char_t name[LM_PATH_MAX];
} lm_process_t;


typedef struct {
	lm_address_t address;
	lm_size_t    size;
	lm_byte_t    bytes[LM_INST_MAX];
	lm_char_t    mnemonic[32];
	lm_char_t    op_str[160];
} lm_inst_t;

typedef uint32_t lm_arch_t;


LM_API lm_size_t LM_CALL
LM_WriteMemoryEx( lm_process_t *process,
		 lm_address_t        dest,
		 lm_bytearray_t      source,
		 lm_size_t           size);


LM_API lm_size_t LM_CALL
LM_SetMemory(lm_address_t dest,
	     lm_byte_t    byte,
	     lm_size_t    size);


LM_API lm_size_t LM_CALL
LM_SetMemoryEx( lm_process_t *process,
	       lm_address_t        dest,
	       lm_byte_t           byte,
	       lm_size_t           size);


LM_API lm_address_t LM_CALL
LM_AllocMemory(lm_size_t size,
	       lm_prot_t prot);


LM_API lm_address_t LM_CALL
LM_AllocMemoryEx( lm_process_t *process,
		 lm_size_t           size,
		 lm_prot_t           prot);


LM_API lm_bool_t LM_CALL
LM_FreeMemory(lm_address_t alloc,
	      lm_size_t    size);


LM_API lm_bool_t LM_CALL
LM_FreeMemoryEx( lm_process_t *process,
		lm_address_t        alloc,
		lm_size_t           size);


LM_API lm_address_t LM_CALL
LM_DeepPointer(lm_address_t        base,
	       const lm_address_t *offsets,
	       size_t              noffsets);


LM_API lm_address_t LM_CALL
LM_DeepPointerEx( lm_process_t *process,
		 lm_address_t        base,
		 const lm_address_t *offsets,
		 lm_size_t           noffsets);


/* Scan API */
LM_API lm_address_t LM_CALL
LM_DataScan(lm_bytearray_t data,
	    lm_size_t      datasize,
	    lm_address_t   address,
	    lm_size_t      scansize);


LM_API lm_address_t LM_CALL
LM_DataScanEx( lm_process_t *process,
	      lm_bytearray_t      data,
	      lm_size_t           datasize,
	      lm_address_t        address,
	      lm_size_t           scansize);


LM_API lm_address_t LM_CALL
LM_PatternScan(lm_bytearray_t pattern,
	       lm_string_t    mask,
	       lm_address_t   address,
	       lm_size_t      scansize);


LM_API lm_address_t LM_CALL
LM_PatternScanEx( lm_process_t *process,
		 lm_bytearray_t      pattern,
		 lm_string_t         mask, /* Example: "xx??x?x", where 'x' == exact pattern byte match, and '?' == any byte */
		 lm_address_t        address,
		 lm_size_t           scansize);


LM_API lm_address_t LM_CALL
LM_SigScan(lm_string_t  signature,
	   lm_address_t address,
	   lm_size_t    scansize);


LM_API lm_address_t LM_CALL
LM_SigScanEx( lm_process_t *process,
	     lm_string_t         signature, /* Example: "DE AD BE EF ?? ?? 13 37" */
	     lm_address_t        address,
	     lm_size_t           scansize);


/* Assemble/Disassemble API */
LM_API lm_arch_t LM_CALL
LM_GetArchitecture();


LM_API lm_bool_t LM_CALL
LM_Assemble(lm_string_t code,
	    lm_inst_t  *instruction_out);


LM_API lm_size_t LM_CALL
LM_AssembleEx(lm_string_t  code,
              lm_arch_t    arch,
	      lm_size_t    bits,
	      lm_address_t runtime_address,
	      lm_byte_t  **payload_out);


LM_API lm_void_t LM_CALL
LM_FreePayload(lm_byte_t *payload);


LM_API lm_bool_t LM_CALL
LM_Disassemble(lm_address_t machine_code,
	       lm_inst_t   *instruction_out);


LM_API lm_size_t LM_CALL
LM_DisassembleEx(lm_address_t machine_code,
                 lm_arch_t    arch,
		 lm_size_t    bits,
		 lm_size_t    max_size,
		 lm_size_t    instruction_count,
		 lm_address_t runtime_address,
		 lm_inst_t  **instructions_out);


LM_API lm_void_t LM_CALL
LM_FreeInstructions(lm_inst_t *instructions);


LM_API lm_size_t LM_CALL
LM_CodeLength(lm_address_t machine_code,
	      lm_size_t    min_length);


LM_API lm_size_t LM_CALL
LM_CodeLengthEx( lm_process_t *process,
		lm_address_t        machine_code,
		lm_size_t           min_length);


/* Hook API */
LM_API lm_size_t LM_CALL
LM_HookCode(lm_address_t  from,
	    lm_address_t  to,
	    lm_address_t *trampoline_out);


LM_API lm_size_t LM_CALL
LM_HookCodeEx( lm_process_t *process,
	      lm_address_t        from,
	      lm_address_t        to,
	      lm_address_t       *trampoline_out);


LM_API lm_bool_t LM_CALL
LM_UnhookCode(lm_address_t from,
	      lm_address_t trampoline,
	      lm_size_t    size);


LM_API lm_bool_t LM_CALL
LM_UnhookCodeEx( lm_process_t *process,
		lm_address_t        from,
		lm_address_t        trampoline,
		lm_size_t           size);