src/nimlibmem.nim


proc writememoryexoriginal(process: ptr Process; dest: memoryaddress;source: bytearray; size: csize_t): csize_t {.cdecl, importc: "LM_WriteMemoryEx".}
#proc writememoryex*(pid: uint32; dest: memoryaddress; source: seq[byte]): csize_t {.exportpy.} = (var process = getprocessex(pid); return writememoryexoriginal(process.addr, dest, source[0].addr, source.len.csize_t))
proc writememoryex*[T](pid: uint32; dest: memoryaddress; data: T): bool {.discardable.} =
  var process = getprocessex(pid)
  ## Writes memory to another process with detailed error handling.
  try:
    if not protmemoryexoriginal(process.addr, dest, sizeof(T).csize_t, Protxrw, nil):
      return false  # Avoiding exception for external process operations to allow graceful degradation
    var bytesWritten: csize_t
    when T is typeof(SomeInteger):
      bytesWritten = writememoryexoriginal(process, dest, cast[ptr byte](addr data), sizeof(T).csize_t)
    else:
      bytesWritten = writememoryexoriginal(process.addr, dest, cast[ptr byte](addr data[0]), sizeof(T).csize_t)
    if bytesWritten != sizeof(T).csize_t:
      echo "Incomplete write operation in external process."
      false
    else:
      true
  except:
    echo "Error occurred during external process memory write."
    false

proc writedata(address: memoryaddress; data: openArray[byte]): bool {.exportpy.} = writememory(address, data)
proc writedata(address: memoryaddress; data: openArray[char]): bool {.exportpy.} = writememory(address, data)
proc writedata(address: memoryaddress; data: openArray[int]): bool {.exportpy.} = writememory(address, data)
proc writedataex(pid: uint32; address: memoryaddress; data: openArray[byte]): bool {.exportpy.} = (var process = getprocessex(pid); return writememoryex(process.pid, address, data))
proc writedataex(pid: uint32; address: memoryaddress; data: openArray[char]): bool {.exportpy.} = (var process = getprocessex(pid); return writememoryex(process.pid, address, data))
proc writedataex(pid: uint32; address: memoryaddress; data: openArray[int]): bool {.exportpy.} = (var process = getprocessex(pid); return writememoryex(process.pid, address, data))

proc setmemoryoriginal(dest: memoryaddress; byte: byte; size: csize_t): csize_t {.cdecl, importc: "LM_SetMemory".}
proc setmemory*(dest: memoryaddress; byte: byte; size: csize_t): csize_t {.exportpy.} = return setmemoryoriginal(dest, byte, size)

proc setmemoryexoriginal(process: ptr Process; dest: memoryaddress; byte: byte;size: csize_t): csize_t {.cdecl, importc: "LM_SetMemoryEx".}
proc setmemoryex*(pid: uint32; dest: memoryaddress; byte: byte; size: csize_t): csize_t {.exportpy.} = (var process = getprocessex(pid); return setmemoryexoriginal(process.addr, dest, byte, size))

proc allocmemoryoriginal(size: csize_t; prot: prot): memoryaddress {.cdecl, importc: "LM_AllocMemory".}
proc allocmemory*(size: csize_t; prot: prot): memoryaddress {.exportpy.} = return allocmemoryoriginal(size, prot)

proc allocmemoryexoriginal(process: ptr Process; size: csize_t; prot: prot): memoryaddress {.cdecl, importc: "LM_AllocMemoryEx".}
proc allocmemoryex*(pid: uint32; size: csize_t; prot: prot): memoryaddress {.exportpy.} = (var process = getprocessex(pid); return allocmemoryexoriginal(process.addr, size, prot))

proc freememoryoriginal(alloc: memoryaddress; size: csize_t): bool {.cdecl, importc: "LM_FreeMemory".}
proc freememory*(alloc: memoryaddress; size: csize_t): bool {.exportpy.} = return freememoryoriginal(alloc, size)

proc freememoryexoriginal(process: ptr Process; alloc: memoryaddress; size: csize_t): bool {.cdecl, importc: "LM_FreeMemoryEx".}
proc freememoryex*(pid: uint32; alloc: memoryaddress; size: csize_t): bool {.exportpy.} = (var process = getprocessex(pid); return freememoryexoriginal(process.addr, alloc, size))

proc deeppointeroriginal(base: memoryaddress; offsets: ptr memoryaddress; noffsets: csize_t): memoryaddress {.cdecl, importc: "LM_DeepPointer".}
proc deeppointer*(base: memoryaddress; offsets: seq[memoryaddress]): memoryaddress {.exportpy.} = return deeppointeroriginal(base, offsets[0].addr, offsets.len.csize_t)

proc deeppointerexoriginal(process: ptr Process; base: memoryaddress;offsets: ptr memoryaddress; noffsets: csize_t): memoryaddress {.cdecl, importc: "LM_DeepPointerEx".}
proc deeppointerex*(pid: uint32; base: memoryaddress; offsets: seq[memoryaddress]): memoryaddress {.exportpy.} = (var process = getprocessex(pid); return deeppointerexoriginal(process.addr, base, offsets[0].addr, offsets.len.csize_t))

proc datascanoriginal(data: bytearray; datasize: csize_t; address: memoryaddress;scansize: csize_t): memoryaddress {.cdecl, importc: "LM_DataScan".}
proc datascan*(data: seq[byte]; address: memoryaddress, scansize: csize_t): memoryaddress {.exportpy.} = return datascanoriginal(data[0].addr, data.len.csize_t, address, scansize)

proc datascanexoriginal(process: ptr Process; data: bytearray; datasize: csize_t;address: memoryaddress; scansize: csize_t): memoryaddress {.cdecl, importc: "LM_DataScanEx".}
proc datascanex*(pid: uint32; data: seq[byte]; address: memoryaddress; scansize: csize_t): memoryaddress {.exportpy.} = (var process = getprocessex(pid); return datascanexoriginal(process.addr, data[0].addr, data.len.csize_t, address, scansize))

proc patternscanoriginal(pattern: bytearray; mask: cstring; address: memoryaddress;scansize: csize_t): memoryaddress {.cdecl, importc: "LM_PatternScan".}
proc patternscan*(pattern: seq[byte]; mask: string; address: memoryaddress; scansize: csize_t): memoryaddress {.exportpy.} = return patternscanoriginal(pattern[0].addr, mask, address, scansize)

proc patternscanexoriginal(process: ptr Process; pattern: bytearray;mask: cstring; address: memoryaddress; scansize: csize_t): memoryaddress {.cdecl, importc: "LM_PatternScanEx".}
proc patternscanex*(pid: uint32; pattern: seq[byte]; mask: string;address: memoryaddress; scansize: csize_t): memoryaddress {.exportpy.} = (var process = getprocessex(pid); return patternscanexoriginal(process.addr, pattern[0].addr, mask, address, scansize))

proc sigscanoriginal(signature: cstring; address: memoryaddress; scansize: csize_t): memoryaddress {.cdecl, importc: "LM_SigScan".}
proc sigscan*(signature: string; address: memoryaddress; scansize: csize_t): memoryaddress {.exportpy.} = return sigscanoriginal(signature, address, scansize)

proc sigscanexoriginal(process: ptr Process; signature: cstring;address: memoryaddress; scansize: csize_t): memoryaddress {.cdecl, importc: "LM_SigScanEx".}
proc sigscanex*(pid: uint32; signature: string; address: memoryaddress;scansize: csize_t): memoryaddress {.exportpy.} = (var process = getprocessex(pid); return sigscanexoriginal(process.addr, signature, address, scansize))

proc getarchitectureoriginal(): archt {.cdecl, importc: "LM_GetArchitecture".}
proc getarchitecture*(): archt {.exportpy.} = return getarchitectureoriginal()

proc assembleoriginal(code: cstring; instructionout: ptr Instruction): bool {.cdecl, importc: "LM_Assemble".}
proc assemble*(code: openArray[char]): Instruction {.exportpy.} = discard assembleoriginal(cast[cstring](code), result.addr)

proc assembleexoriginal(code: openArray[char]; arch: archt; bits: csize_t;runtimeaddress: memoryaddress; payloadout: ptr ptr byte): csize_t {.cdecl, importc: "LM_AssembleEx".}
proc assembleex*(code: openArray[char]; arch: archt; bits: csize_t;runtimeaddress: memoryaddress): Instruction {.exportpy.} = (var payload: ptr byte; discard assembleexoriginal(code, arch, bits, runtimeaddress, payload.addr); return cast[Instruction](payload[]))

proc freepayloadoriginal(payload: ptr byte): void {.cdecl, importc: "LM_FreePayload".}
proc freepayload*(payload: memoryaddress): void {.exportpy.} = freepayloadoriginal(cast[ptr byte](payload))

proc disassembleoriginal(machinecode: memoryaddress; instructionout: ptr Instruction): bool {.cdecl, importc: "LM_Disassemble".}
proc disassemble*(machinecode: memoryaddress): Instruction {.exportpy.} = (var inst: Instruction; discard disassembleoriginal(machinecode, inst.addr))

proc disassembleexoriginal(machinecode: memoryaddress; arch: archt; bits: csize_t;maxsize: csize_t; instructioncount: csize_t;runtimeaddress: memoryaddress; instructionsout: ptr ptr Instruction): csize_t {.cdecl, importc: "LM_DisassembleEx".}
proc disassembleex*(machinecode: memoryaddress; arch: archt; bits: csize_t;maxsize: csize_t; instructioncount: csize_t;runtimeaddress: memoryaddress): Instruction {.exportpy.} = (var instructions: ptr Instruction; discard disassembleexoriginal(machinecode, arch, bits, maxsize, instructioncount, runtimeaddress, instructions.addr); return instructions[])

proc freeinstructionsoriginal(instructions: ptr Instruction): void {.cdecl, importc: "LM_FreeInstructions".}
proc freeinstructions*(instructions: Instruction): void {.exportpy.} = freeinstructionsoriginal(instructions.addr)

proc codelengthoriginal(machinecode: memoryaddress; minlength: csize_t): csize_t {.cdecl, importc: "LM_CodeLength".}
proc codelength*(machinecode: memoryaddress; minlength: csize_t): csize_t {.exportpy.} = return codelengthoriginal(machinecode, minlength)

proc codelengthexoriginal(process: ptr Process; machinecode: memoryaddress;minlength: csize_t): csize_t {.cdecl, importc: "LM_CodeLengthEx".}
proc codelengthex*(pid: uint32; machinecode: memoryaddress; minlength: csize_t): csize_t {.exportpy.} = (var process = getprocessex(pid); return codelengthexoriginal(process.addr, machinecode, minlength))

proc hookcodeoriginal(fromarg: memoryaddress; to: memoryaddress; trampolineout: ptr memoryaddress): csize_t {.cdecl, importc: "LM_HookCode".}
proc hookcode*(fromarg: memoryaddress; to: memoryaddress): memoryaddress {.exportpy.} = (var trampoline: memoryaddress; return hookcodeoriginal(fromarg, to, trampoline.addr))

proc hookcodeexoriginal(process: ptr Process; fromarg: memoryaddress; to: memoryaddress;trampolineout: ptr memoryaddress): csize_t {.cdecl, importc: "LM_HookCodeEx".}
proc hookcodeex*(pid: uint32; fromarg: memoryaddress; to: memoryaddress): memoryaddress {.exportpy.} = (var process = getprocessex(pid); discard  hookcodeexoriginal(process.addr, fromarg, to, result.addr))

proc unhookcodeoriginal(fromarg: memoryaddress; trampoline: memoryaddress; size: csize_t): bool {.cdecl, importc: "LM_UnhookCode".}
proc unhookcode*(fromarg: memoryaddress; trampoline: memoryaddress; size: csize_t): bool {.exportpy.} = return unhookcodeoriginal(fromarg, trampoline, size)

proc unhookcodeexoriginal(process: ptr Process; fromarg: memoryaddress;trampoline: memoryaddress; size: csize_t): bool {.cdecl, importc: "LM_UnhookCodeEx".}
proc unhookcodeex*(pid: uint32; fromarg: memoryaddress; trampoline: memoryaddress;size: csize_t): bool {.exportpy.} = (var process = getprocessex(pid); return unhookcodeexoriginal(process.addr, fromarg, trampoline, size))

